Fix/Fixing revoke vc route and service
